cluster_configuation/backup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["137.75.164.215","137.75.164.217","137.75.164.218"],"port":80,"protocol":"HTTP","serviceName":"gitauth:githubuserauthcontainer","ingressName":"gitauth:githubapprovals-ingress","hostname":"apps-dev.gsd.esrl.noaa.gov","path":"/githubapprovals/(.*)","allNodes":false},{"addresses":["137.75.164.215","137.75.164.217","137.75.164.218"],"port":80,"protocol":"HTTP","serviceName":"gitauth:githubuserauthcontainer","ingressName":"gitauth:githubapprovals-ingress","hostname":"apps-dev.gsd [...]
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
  creationTimestamp: '2025-01-27T22:16:17Z'
  generation: 26
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: nginx-ingress-controller
      operation: Update
      subresource: status
      time: '2025-01-27T22:17:16Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/publicEndpoints: {}
            f:nginx.ingress.kubernetes.io/rewrite-target: {}
            f:nginx.ingress.kubernetes.io/use-regex: {}
        f:spec:
          f:rules: {}
      manager: agent
      operation: Update
      time: '2025-01-29T20:11:02Z'
  name: githubapprovals-ingress
  namespace: gitauth
  resourceVersion: '404602925'
  uid: 6437b728-3070-4ca2-8979-023a5822a432
spec:
  rules:
    - host: apps-dev.gsd.esrl.noaa.gov
      http:
        paths:
          - backend:
              service:
                name: githubuserauthcontainer
                port:
                  number: 80
            path: /githubapprovals/(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: githubuserauthcontainer
                port:
                  number: 80
            path: /static/(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: githubuserauthcontainer
                port:
                  number: 80
            path: /images/(.*)
            pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
      - ip: 137.75.164.215
      - ip: 137.75.164.217
      - ip: 137.75.164.218
